added & updated endpoints
