# controllers/index.js
@@ -1,11 +1,15 @@
 const authCtrl = require("./auth")
 const contactsCtrl = require("./contacts")
 const carsCtrl = require("./cars")
+const servicesCtrl = require("./services")
 const coursesCtrl = require("./courses")
+const productsCtrl = require("./products")
 
 module.exports = {
     authCtrl,
     carsCtrl,
     contactsCtrl,
     coursesCtrl,
+    servicesCtrl,
+    productsCtrl,
 }
