# controllers/services.js
@@ -1,8 +1,8 @@
 const { ctrlWrapper } = require("../helpers")
-const { Courses } = require("../models")
+const { Services } = require("../models")
 
-const getAllCourses = async (req, res) => {
-    const menu = await Courses.find(
+const getAllServices = async (req, res) => {
+    const menu = await Services.find(
         {},
         {
             _id: 1,
@@ -17,10 +17,10 @@ const getAllCourses = async (req, res) => {
     res.status(200).json(menu)
 }
 
-const getCourseByAlias = async (req, res) => {
-    const category = req.params
+const getServiceByAlias = async (req, res) => {
+    const { alias } = req.params
 
-    const course = await Courses.findOne({ "pages.alias": category.alias }, { "pages.$": 1 })
+    const course = await Services.findOne({ "pages.alias": alias }, { "pages.$": 1 })
     if (!course || !course.pages || course.pages.length === 0) {
         return res.status(404).json({ error: "Курс не знайдено" })
     }
@@ -30,6 +30,6 @@ const getCourseByAlias = async (req, res) => {
 }
 
 module.exports = {
-    getAllCourses: ctrlWrapper(getAllCourses),
-    getCourseByAlias: ctrlWrapper(getCourseByAlias),
+    getAllServices: ctrlWrapper(getAllServices),
+    getServiceByAlias: ctrlWrapper(getServiceByAlias),
 }
