# routes/api/courses.js
@@ -3,9 +3,6 @@ const coursesRouter = express.Router()
 const { coursesCtrl } = require("../../controllers")
 
 coursesRouter.get("/", coursesCtrl.getAllCourses)
-
 coursesRouter.get("/:alias", coursesCtrl.getCourseByAlias)
-
-coursesRouter.post("/products", coursesCtrl.getProducts)
 
 module.exports = coursesRouter
