# routes/api/products.js
@@ -1,0 +1,7 @@
+const express = require("express")
+const productsRouter = express.Router()
+const { productsCtrl } = require("../../controllers")
+
+productsRouter.post("/", productsCtrl.getProducts)
+
+module.exports = productsRouter
